--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors/title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="rock-paper-scissors.js"></script>
     
 </body>
+<script src="rock-paper-scissors.js"></script>
 </html>
