--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <button id="rock">"Rock"</button>
     <button id="paper">"Paper"</button>
     <button id="scissors">"Scissors"</button>
+
+    <div id="results"></div>
+    <div id="score"></div>
 </body>
 <script src="rock-paper-scissors.js"></script>
 </html>
