--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div id="results"></div>
     <div id="score"></div>
+    <div id="gameOver"></div>
 </body>
 <script src="rock-paper-scissors.js"></script>
 </html>
