--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="rock">"Rock"</button>
-    <button id="paper">"Paper"</button>
-    <button id="scissors">"Scissors"</button>
+    <h1>Rock, Paper, Scissors</h1>
+    <div id="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
 
     <div id="results"></div>
     <div id="score"></div>
